@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 
 pushd /root
 
@@ -7,117 +7,58 @@ if [ -d "spark" ]; then
   return
 fi
 
+# TODO ensure set
+#${HADOOP_VERSION:?}
+HADOOP_VERSION=${HADOOP_VERSION-"2.4.1"}
+
+if [ `python -c "print '$HADOOP_VERSION'.startswith('2.4')"` == "True" ]; then
+  HADOOP_PROFILE="hadoop-2.4"
+  HADOOP_PROFILE2="hadoop2.4"
+else
+  echo "Unknown hadoop profile. Exiting."
+  return -1
+fi
+
+
 # Github tag:
 if [[ "$SPARK_VERSION" == *\|* ]]
 then
+
+  # TODO find way of specifying Tachyon version in build via command line... probably not possible until they make it a property in their build.
+
+  repo=`python -c "print '$SPARK_VERSION'.split('|')[0]"`
+  git_hash=`python -c "print '$SPARK_VERSION'.split('|')[1]"`
+
+  echo "Building Spark from $repo, hash: $git_hash against Hadoop $HADOOP_VERSION using profile $HADOOP_PROFILE"
   mkdir spark
   pushd spark
   git init
-  repo=`python -c "print '$SPARK_VERSION'.split('|')[0]"` 
-  git_hash=`python -c "print '$SPARK_VERSION'.split('|')[1]"`
   git remote add origin $repo
   git fetch origin
   git checkout $git_hash
-  sbt/sbt clean assembly
-  sbt/sbt publish-local
+  export MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=512M -XX:ReservedCodeCacheSize=512m"
+  # TODO need -Phadoop-provided ??
+  # TODO mvn install ??
+  # Note: this takes a over an hour on an m3.medium
+  # TODO find way of selecting which modules to build, as we don't need all of them.
+  mvn -Pyarn -P$HADOOP_PROFILE -Dhadoop.version=${HADOOP_VERSION} -Phive -DskipTests clean package
   popd
 
 # Pre-packaged spark version:
 else 
-  case "$SPARK_VERSION" in
-    0.7.3)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.7.3-prebuilt-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.7.3-prebuilt-cdh4.tgz
-      fi
-      ;;    
-    0.8.0)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.8.0-incubating-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.8.0-incubating-bin-cdh4.tgz
-      fi
-      ;;    
-    0.8.1)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.8.1-incubating-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.8.1-incubating-bin-cdh4.tgz
-      fi
-      ;;    
-    0.9.0)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.9.0-incubating-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.9.0-incubating-bin-cdh4.tgz
-      fi
-      ;;
-    0.9.1)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.9.1-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.9.1-bin-cdh4.tgz
-      fi
-      ;;
-    0.9.2)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.9.2-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-0.9.2-bin-cdh4.tgz
-      fi
-      ;;
-    1.0.0)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.0.0-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.0.0-bin-cdh4.tgz
-      fi
-      ;;
-    1.0.1)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.0.1-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.0.1-bin-cdh4.tgz
-      fi
-      ;;
-    1.0.2)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.0.2-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.0.2-bin-cdh4.tgz
-      fi
-      ;;
-    1.1.0)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.1.0-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.1.0-bin-cdh4.tgz
-      fi
-      ;;
-    1.1.1)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.1.1-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.1.1-bin-cdh4.tgz
-      fi
-      ;;
-    1.2.0)
-      if [[ "$HADOOP_MAJOR_VERSION" == "1" ]]; then
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.2.0-bin-hadoop1.tgz
-      else
-        wget http://s3.amazonaws.com/spark-related-packages/spark-1.2.0-bin-cdh4.tgz
-      fi
-      ;;
-    *)
-      echo "ERROR: Unknown Spark version"
-      return
-  esac
+
+  echo "Getting pre-packaged Spark $SPARK_VERSION built against $HADOOP_PROFILE"
+  wget http://s3.amazonaws.com/spark-related-packages/spark-$SPARK_VERSION-bin-$HADOOP_PROFILE2.tgz
 
   echo "Unpacking Spark"
   tar xvzf spark-*.tgz > /tmp/spark-ec2_spark.log
-  rm spark-*.tgz
+  rm -f spark-*.tgz
   mv `ls -d spark-* | grep -v ec2` spark
+fi
+
+# Don't copy-dir if we're running this as part of image creation.
+if [ -d "/root/spark-ec2" ]; then
+  /root/spark-ec2/copy-dir /root/spark
 fi
 
 popd
